--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -1,7 +1,8 @@
  .u-section-1  {
   /* background-image: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("images/tankhigh.jpg"); */
   /* background-position: 50% 77.52%; */
-  background: url("/new/img/tankhigh1.jpg") no-repeat center center;
+  
+  background: url("/new/img/tankhigh.jpg") no-repeat center center;
   position: relative;
   /* overflow: hidden; */
   /* padding-top: calc(7rem + 72px); */
@@ -19,6 +20,7 @@
 }
 
 .u-section-1 .u-text-1 {
+  
   top: 40px;
   font-size: 3rem;
   background-image: none;
