--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -2,7 +2,7 @@
   /* background-image: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("images/tankhigh.jpg"); */
   /* background-position: 50% 77.52%; */
   
-  background: url("/new/img/tankhigh.jpg") no-repeat center center;
+  background: url("/new/img/tankhigh1.jpg") no-repeat center center;
   position: relative;
   /* overflow: hidden; */
   /* padding-top: calc(7rem + 72px); */
