--- a/public/new/css/produk2.css
+++ b/public/new/css/produk2.css
@@ -198,12 +198,12 @@
     pointer-events: none;
     z-index: 4;
     transition: .3s ease-in-out;
-    -webkit-backdrop-filter: blur(5px) saturate(1.8);
-    backdrop-filter: blur(5px) saturate(2.8);
+    -webkit-backdrop-filter: blur(4px) saturate(1.8);
+    backdrop-filter: blur(4px) saturate(2.8);
 }
 .gallery-item:hover .text{
     opacity: 1;
-    animation: move-down .3s linear;
+    animation: move-center .3s linear;
     display: flex;
     align-items: center;
     justify-content: center;
