--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -16,38 +16,35 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 612px;
+  min-height: 548px;
 }
 
 .u-section-1 .u-text-1 {
-  
-  top: 40px;
+  text-transform: uppercase;
   font-size: 3rem;
-  background-image: none;
   font-weight: 700;
-  margin: 103px auto 0 0;
+  margin: 81px auto 0 0;
 }
 
 .u-section-1 .u-line-1 {
-  top: 40px;
-  width: 415px;
+  width: 685px;
   transform-origin: left center;
-  margin: 8px auto 0 0;
+  margin: 12px auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
-  top: 40px;
-  font-weight: 600;
-  margin: 22px 314px 0 0;
+  font-weight: 500;
+  font-size: 1.5rem;
+  margin: 20px 117px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
-  border-style: none;
-  font-weight: 700;
-  font-size: 0.875rem;
-  letter-spacing: 0px;
+  border-style: none none solid;
+  font-family: Poppins;
+  font-weight: 600;
   text-transform: uppercase;
-  margin: 243px auto 60px;
+  font-size: 0.875rem;
+  margin: 268px auto 20px;
   padding: 0;
 }
 
@@ -56,12 +53,12 @@
     min-height: 505px;
   }
 
-  .u-section-1 .u-line-1 {
-    height: 0;
+  .u-section-1 .u-text-2 {
+    margin-right: 0;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-right: 114px;
+  .u-section-1 .u-btn-1 {
+    margin-top: 231px;
   }
 }
 
@@ -69,27 +66,38 @@
   .u-section-1 .u-sheet-1 {
     min-height: 387px;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-right: 0;
-  }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 290px;
+    min-height: 513px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 460px;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 186px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 183px;
+    min-height: 508px;
   }
 
   .u-section-1 .u-line-1 {
-    width: 340px;
+    width: 320px;
   }
-} .u-section-2 {
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 128px;
+    margin-bottom: 21px;
+  }
+}
+
+ .u-section-2 {
   background-image: none;
 }
 
