Update weapons-list.blade.php dan Weapons-list.css
memperbarui weapon list

--- a/public/css/Weapons-list.css
+++ b/public/css/Weapons-list.css
@@ -3,430 +3,458 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 673px;
+  min-height: 595px;
 }
 
 .u-section-1 .u-text-1 {
-  background-image: none;
-  margin: 12px auto 0 0;
+  font-weight: 500;
+  font-size: 2.25rem;
+  margin: 36px auto 0 0;
 }
 
 .u-section-1 .u-line-1 {
-  width: 187px;
+  width: 186px;
   transform-origin: left center;
-  margin: 11px auto 0 0;
-}
-
-.u-section-1 .u-layout-wrap-1 {
-  margin: 60px auto 60px 0;
-}
-
-.u-section-1 .u-layout-cell-1 {
-  min-height: 552px;
-}
-
-.u-section-1 .u-shape-1 {
-  width: 456px;
-  background-image: none;
-  height: 420px;
-  margin: 0 auto 0 0;
+  margin: 7px auto 0 0;
 }
 
 .u-section-1 .u-image-1 {
-  width: 512px;
-  height: 402px;
-  margin: -420px 42px 0 auto;
-}
-
-.u-section-1 .u-layout-cell-2 {
-  min-height: 552px;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 20px 60px;
+  width: 570px;
+  height: 404px;
+  margin: 36px auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: 400;
-  margin: 0;
-}
-
-.u-section-1 .u-text-3 {
-  margin: 20px 0 0;
+  font-weight: 500;
+  font-size: 3.75rem;
+  margin: -287px 152px 60px auto;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 552px;
-  }
-
-  .u-section-1 .u-text-1 {
-    font-size: 2.25rem;
-    font-weight: 500;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: 58px;
-    margin-bottom: 0;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 455px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 436px;
-    height: 328px;
-  }
-
-  .u-section-1 .u-image-1 {
-    width: 444px;
-    height: 315px;
-    margin-top: -322px;
-    margin-right: 20px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 455px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 55px;
-    padding-right: 55px;
+    min-height: 697px;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 3rem;
     width: auto;
-    font-weight: 500;
-    margin-top: 42px;
-    margin-right: 11px;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 27px;
-    margin-right: 11px;
+    margin-top: -288px;
+    margin-right: 48px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 446px;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 308px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 296px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    min-height: 531px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 272px;
-    margin-top: -284px;
-    margin-bottom: -6px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+    width: 400px;
+    height: 283px;
+    margin-top: 65px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: -172px;
     margin-right: 0;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-right: 0;
+    font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 673px;
+    min-height: 425px;
   }
 
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 390px;
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: 39px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 247px;
+  .u-section-1 .u-line-1 {
+    width: 155px;
+  }
+
+  .u-section-1 .u-image-1 {
+    width: 278px;
+    height: 203px;
+    margin-top: 70px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.875rem;
+    margin-top: -142px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 497px;
+    min-height: 301px;
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-  }
-
-  .u-section-1 .u-layout-cell-1 {
-    min-height: 326px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 254px;
+    font-size: 1.25rem;
     width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    margin-top: 30px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 108px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 219px;
-    margin-top: -242px;
-    margin-bottom: 0;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 207px;
+    height: 146px;
+    margin-top: 55px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 167px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+    margin-top: -109px;
+    margin-bottom: 104px;
   }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 551px;
+  min-height: 434px;
 }
 
-.u-section-2 .u-shape-1 {
-  height: 415px;
-  width: 945px;
-  margin: 68px 0 0 195px;
-}
-
-.u-section-2 .u-shape-2 {
-  height: 400px;
-  width: 450px;
-  margin: -363px 690px 0 0;
-}
-
-.u-section-2 .u-group-1 {
-  min-height: 350px;
-  width: 522px;
-  height: auto;
-  margin: -424px 31px 0 auto;
-}
-
-.u-section-2 .u-container-layout-1 {
-  padding: 20px 60px;
+.u-section-2 .u-image-1 {
+  width: 354px;
+  height: 432px;
+  margin: 0 264px 0 auto;
 }
 
 .u-section-2 .u-text-1 {
   font-weight: 500;
-  margin: 100px 0 0;
-}
-
-.u-section-2 .u-btn-1 {
-  border-style: none;
-  font-weight: 700;
-  font-size: 0.875rem;
-  letter-spacing: 0px;
-  text-transform: uppercase;
-  margin: 30px auto 0 0;
-  padding: 0;
-}
-
-.u-section-2 .u-layout-wrap-1 {
-  width: 486px;
-  margin: -410px auto 60px 79px;
-}
-
-.u-section-2 .u-image-1 {
-  min-height: 420px;
-  background-image: url("images/mortarbombs.jpg");
-  background-position: 50% 50%;
-}
-
-.u-section-2 .u-container-layout-2 {
-  padding: 20px;
+  font-size: 3.75rem;
+  margin: -283px auto 60px 205px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-shape-1 {
-    width: 779px;
-    margin-left: 161px;
-  }
-
-  .u-section-2 .u-shape-2 {
-    width: 371px;
-    margin-right: 569px;
-  }
-
-  .u-section-2 .u-group-1 {
-    min-height: 340px;
-    margin-right: 25px;
-    margin-left: 506px;
-    height: auto;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 49px;
-    padding-right: 49px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    width: 441px;
-    margin-top: -400px;
-    margin-right: 434px;
-    margin-left: 65px;
-  }
-
-  .u-section-2 .u-image-1 {
-    min-height: 410px;
+  .u-section-2 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-left: 203px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-shape-1 {
-    height: 437px;
-    width: 570px;
-    margin-top: 46px;
-    margin-left: 150px;
-  }
-
-  .u-section-2 .u-shape-2 {
-    height: 372px;
-    width: 284px;
-    margin-top: -335px;
-    margin-right: 436px;
-  }
-
-  .u-section-2 .u-group-1 {
-    min-height: 411px;
-    margin-top: -461px;
-    margin-right: 19px;
-    margin-left: 371px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    width: 321px;
-    margin-top: -350px;
-    margin-right: auto;
-    margin-left: 50px;
-  }
-
   .u-section-2 .u-image-1 {
-    min-height: 345px;
+    width: 292px;
+    height: 357px;
+    margin-top: 28px;
+    margin-right: 203px;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
+  .u-section-2 .u-text-1 {
+    margin-top: -207px;
+    margin-left: 49px;
+    font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 760px;
-  }
-
-  .u-section-2 .u-shape-1 {
-    height: 667px;
-    width: 448px;
-    margin-top: 64px;
-    margin-left: 92px;
-  }
-
-  .u-section-2 .u-shape-2 {
-    height: 295px;
-    width: 323px;
-    margin-top: -610px;
-    margin-right: 217px;
-  }
-
-  .u-section-2 .u-group-1 {
-    min-height: 301px;
-    margin-top: 14px;
-    margin-right: 8px;
-    margin-left: 108px;
-  }
-
-  .u-section-2 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    width: 338px;
-    margin-top: -694px;
-    margin-right: 164px;
-    margin-left: 37px;
+    min-height: 311px;
   }
 
   .u-section-2 .u-image-1 {
-    min-height: 322px;
+    width: 284px;
+    height: 346px;
+    margin-top: -35px;
+    margin-right: auto;
   }
 
-  .u-section-2 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
+  .u-section-2 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -195px;
+    margin-bottom: 129px;
+    margin-left: 68px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 700px;
-  }
-
-  .u-section-2 .u-shape-1 {
-    height: 607px;
-    width: 311px;
-    margin-left: 29px;
-  }
-
-  .u-section-2 .u-shape-2 {
-    height: 269px;
-    width: 241px;
-    margin-top: -607px;
-    margin-right: 99px;
-  }
-
-  .u-section-2 .u-group-1 {
-    min-height: 315px;
-    margin-top: 11px;
-    margin-right: 12px;
-    margin-left: 40px;
-    width: 340px;
-  }
-
-  .u-section-2 .u-layout-wrap-1 {
-    width: 250px;
-    margin-top: -630px;
-    margin-right: 62px;
-    margin-left: 29px;
+    min-height: 187px;
   }
 
   .u-section-2 .u-image-1 {
-    min-height: 256px;
+    width: 195px;
+    height: 140px;
+    margin-top: 15px;
+  }
+
+  .u-section-2 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -92px;
+    margin-bottom: 60px;
+    margin-left: 46px;
+  }
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 434px;
+}
+
+.u-section-3 .u-image-1 {
+  width: 354px;
+  height: 432px;
+  margin: 0 auto 0 29px;
+}
+
+.u-section-3 .u-text-1 {
+  font-weight: 500;
+  font-size: 3.75rem;
+  margin: -282px 289px 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 433px;
+  }
+
+  .u-section-3 .u-image-1 {
+    margin-top: 1px;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: -255px;
+    margin-right: 123px;
+    margin-bottom: 151px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 430px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 332px;
+    height: 406px;
+    margin-top: 12px;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: -242px;
+    margin-right: 55px;
+    margin-bottom: 175px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 375px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 283px;
+    height: 345px;
+    margin-left: -50px;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 1.875rem;
+    margin-right: 45px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 192px;
+  }
+
+  .u-section-3 .u-image-1 {
+    width: 154px;
+    height: 188px;
+    margin-top: 0;
+    margin-left: 0;
+  }
+
+  .u-section-3 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -113px;
+    margin-right: 17px;
+  }
+} .u-section-4 {
+  background-image: none;
+}
+
+.u-section-4 .u-sheet-1 {
+  min-height: 434px;
+}
+
+.u-section-4 .u-image-1 {
+  width: 426px;
+  height: 432px;
+  margin: 0 264px 0 auto;
+}
+
+.u-section-4 .u-text-1 {
+  font-weight: 500;
+  font-size: 3.75rem;
+  margin: -282px auto 60px 205px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 460px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: -227px;
+    margin-left: 146px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 403px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 358px;
+    height: 363px;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: -172px;
+    margin-left: 145px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 357px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 311px;
+    height: 315px;
+    margin-top: 1px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -171px;
+    margin-left: 68px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 219px;
+  }
+
+  .u-section-4 .u-image-1 {
+    width: 196px;
+    height: 199px;
+    margin-top: 0;
+    margin-left: 54px;
+  }
+
+  .u-section-4 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -97px;
+    margin-left: 35px;
+  }
+} .u-section-5 {
+  background-image: none;
+}
+
+.u-section-5 .u-sheet-1 {
+  min-height: 434px;
+}
+
+.u-section-5 .u-image-1 {
+  width: 409px;
+  height: 432px;
+  margin: 0 auto 0 -26px;
+}
+
+.u-section-5 .u-text-1 {
+  font-weight: 500;
+  font-size: 3.75rem;
+  margin: -282px 289px 60px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 499px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: -235px;
+    margin-right: 146px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 407px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 364px;
+    height: 343px;
+    margin-left: -49px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 2.25rem;
+    margin-top: -176px;
+    margin-right: 75px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 345px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 313px;
+    height: 295px;
+    margin-left: -43px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -130px;
+    margin-right: 26px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 242px;
+  }
+
+  .u-section-5 .u-image-1 {
+    width: 203px;
+    height: 191px;
+    margin-left: -50px;
+  }
+
+  .u-section-5 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -93px;
+    margin-right: 17px;
   }
 }
