--- a/public/css/other-list.css
+++ b/public/css/other-list.css
@@ -3,188 +3,141 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 763px;
-}
-
-.u-section-1 .u-text-1 {
-  font-size: 2.25rem;
-  font-weight: 500;
-  margin: 0 0 0 auto;
-}
-
-.u-section-1 .u-line-1 {
-  width: 107px;
-  transform-origin: right center;
-  margin: 0 0 0 auto;
-}
-
-.u-section-1 .u-shape-1 {
-  width: 644px;
-  height: 683px;
-  margin: 1px auto 0 -45px;
-}
-
-.u-section-1 .u-layout-wrap-1 {
-  margin: -622px auto 60px 0;
+  min-height: 640px;
 }
 
 .u-section-1 .u-image-1 {
-  min-height: 559px;
-  background-image: url("images/frontobservermanpack.jpg");
-  background-position: 50% 50%;
+  width: 764px;
+  height: 540px;
+  margin: 0 0 0 auto;
 }
 
-.u-section-1 .u-container-layout-1 {
-  padding: 0 35px 0 0;
+.u-section-1 .u-text-1 {
+  font-size: 3rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: -517px auto 0 0;
 }
 
-.u-section-1 .u-layout-cell-2 {
-  min-height: 559px;
-}
-
-.u-section-1 .u-container-layout-2 {
-  padding: 20px 40px 20px 115px;
+.u-section-1 .u-line-1 {
+  width: 163px;
+  transform-origin: left center;
+  margin: 0 auto 0 0;
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: 500;
-  margin: 164px auto 0 0;
-}
-
-.u-section-1 .u-btn-1 {
-  border-style: solid;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin: 40px auto 0 0;
+  font-size: 3.75rem;
+  margin: 162px auto 60px 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 665px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 564px;
-    height: 424px;
-    margin-top: 20px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: -461px;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 478px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 461px;
+    width: 570px;
+    height: 403px;
+    margin-top: -5px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 461px;
+  .u-section-1 .u-text-1 {
+    width: auto;
+    font-size: 2.25rem;
+    margin-top: -374px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 127px;
+    transform: rotate(360deg);
+    margin-top: 7px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 3rem;
+    width: auto;
+    margin-top: 122px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 577px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 364px;
-    height: 344px;
-    margin-top: 70px;
-    margin-left: -19px;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    margin-top: -395px;
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 451px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 353px;
+    margin-top: -16px;
   }
 
-  .u-section-1 .u-container-layout-1 {
-    padding-right: 30px;
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+    margin-top: -367px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 100px;
+  .u-section-1 .u-line-1 {
+    width: 118px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding-right: 30px;
-    padding-left: 83px;
+  .u-section-1 .u-text-2 {
+    margin-top: 103px;
+    font-size: 2.25rem;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1440px;
-  }
-
-  .u-section-1 .u-shape-1 {
-    width: 519px;
-    height: 386px;
-    margin-top: 335px;
-    margin-left: 0;
-  }
-
-  .u-section-1 .u-layout-wrap-1 {
-    width: 480px;
-    margin-left: auto;
-    margin-right: auto;
+    min-height: 376px;
   }
 
   .u-section-1 .u-image-1 {
-    min-height: 499px;
+    width: 401px;
+    height: 284px;
+    margin-top: 35px;
   }
 
-  .u-section-1 .u-container-layout-1 {
-    padding-right: 0;
+  .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
+    margin-top: -284px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 329px;
+  .u-section-1 .u-line-1 {
+    width: 92px;
+    margin-top: 6px;
   }
 
-  .u-section-1 .u-container-layout-2 {
-    padding: 138px 10px 13px;
+  .u-section-1 .u-text-2 {
+    font-size: 1.875rem;
+    margin-top: 57px;
+    margin-left: 6px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1082px;
+    min-height: 308px;
   }
 
-  .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-  }
-
-  .u-section-1 .u-shape-1 {
-    height: 351px;
+  .u-section-1 .u-image-1 {
+    height: 241px;
+    margin-top: 26px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
-  .u-section-1 .u-layout-wrap-1 {
-    width: 281px;
-    margin-top: -293px;
+  .u-section-1 .u-text-1 {
+    font-size: 1.25rem;
+    margin-top: -233px;
   }
 
-  .u-section-1 .u-image-1 {
-    min-height: 242px;
+  .u-section-1 .u-line-1 {
+    width: 74px;
+    margin-top: 9px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 189px;
-  }
-
-  .u-section-1 .u-container-layout-2 {
-    padding-top: 85px;
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
+    margin-top: 41px;
+    margin-left: 0;
   }
 }
