--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -69,7 +69,8 @@ footer{
 /* Footer left */
 
 .footer-distributed .footer-left{
-	width: 30%;
+	/* width: 38%; */
+	width: 10%;
 }
 
 .footer-distributed h3{
@@ -112,7 +113,8 @@ footer{
 /* Footer Center */
 
 .footer-distributed .footer-center{
-	width: 35%;
+	/* width: 30%; */
+	width: 49%;
 }
 
 
@@ -134,14 +136,14 @@ footer{
 	line-height: 38px;
 }
 
-.footer-distributed .footer-center p{
+/* .footer-distributed .footer-center p{
 	display: inline-block;
 	color: #ffffff;
 	vertical-align: middle;
 	margin:0;
-}
+} */
 
-.footer-distributed .footer-center p span{
+/* .footer-distributed .footer-center p span{
 	display:block;
 	font-weight: normal;
 	font-size:14px;
@@ -151,13 +153,49 @@ footer{
 .footer-distributed .footer-center p a{
 	color:  #e0ac1c;
 	text-decoration: none;;
+} */
+
+/* .footer-distributed .footer-center{
+	width: 35%;
+}
+
+.footer-distributed h3{
+	color:  #ffffff;
+	font: normal 36px 'Cookie', cursive;
+	margin: 0;
+} */
+
+/* The company logo */
+
+.footer-distributed .footer-center img{
+	width: 30%;
+	/* margin: 0;
+	margin-left: 60px; */
+	margin-right:auto;
+	margin-left: auto;
+	display: block;
+}
+
+.footer-distributed h3 span{
+	color:  #e0ac1c;
+}
+.footer-distributed .footer-company-name{
+	color:  #8f9296;
+	font-size: 14px;
+	font-weight: normal;
+	/* margin: 0; */
+	text-align: center;
+	display: block;
 }
 
 
 /* Footer Right */
 
 .footer-distributed .footer-right{
-	width: 30%;
+	/* width: 21%; */
+	/* margin-left: 150px; */
+	width: 20%;
+	padding-top: 20px;
 }
 
 .footer-distributed .footer-company-about{
@@ -165,7 +203,9 @@ footer{
 	color:  #92999f;
 	font-size: 13px;
 	font-weight: normal;
-	margin: 0;
+	/* margin: 0; */
+	/* text-align: center;
+	display: block; */
 }
 
 .footer-distributed .footer-company-about span{
@@ -174,10 +214,17 @@ footer{
 	font-size: 18px;
 	font-weight: bold;
 	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	/* text-align: center;
+	display: block; */
 }
 
 .footer-distributed .footer-icons{
 	margin-top: 25px;
+	/* text-align: center;
+	display: block; */
+
 }
 
 .footer-distributed .footer-icons a{
@@ -216,4 +263,11 @@ footer{
 		margin-left: 0;
 	}
 
+}
+
+.footer-distributed .footer-left1{
+	width: 20%;
+}
+.footer-distributed .footer-left2{
+	width: 20%;
 }
